Adding section removal change

--- a/css/layout.css
+++ b/css/layout.css
@@ -58,6 +58,7 @@ section {
 .organizational-aspects-section {
   background: var(--color-bg-primary);
   margin-bottom: 0;
+  padding-top: 0 !important;
 }
 
 
